my first commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "/milky-bar-demo-panel",
   "name": "milkybar",
   "version": "0.1.0",
   "private": true,
@@ -18,8 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d dist"
+    "eject": "react-scripts eject"  
   },
   "eslintConfig": {
     "extends": [
